--- a/HamiltonTevin_ECommerce/app/build.gradle
+++ b/HamiltonTevin_ECommerce/app/build.gradle
@@ -32,25 +32,26 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding = true
-    }
+
     dataBinding{
         enabled = true
+    }
+    buildFeatures {
+        viewBinding = true
     }
 
 }
 
 dependencies {
     def fragment_version = "1.3.6"
+    def lifecycle_version = "2.4.0-beta01"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     // Annotation processor
-    // Annotation processor
-    kapt("androidx.lifecycle:lifecycle-compiler:2.3.1")
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
 
     implementation "androidx.room:room-runtime:2.3.0"
